--- a/tests/0100-dpdk-single-l2.conf
+++ b/tests/0100-dpdk-single-l2.conf
@@ -1,13 +1,25 @@
+%info
+Test throughput through two NICs using DPDK
+
 %require
 #Still do nothing
 click-buildtool provides dpdk
 
 %config
 #Still do nothing
-tags=physdual
+tags=physdual,dpdk,fastclick,sudo
+
+#Grapg title
+title='DPDK L2 Fwd test'
+#Axis name
+axis[0]=Throughput
+
+acceptable=0.001
+unacceptable_n_runs=3
+
 
 %script
-click CONFIG
+click --dpdk -c 0x1 -n 4 -- CONFIG
 
 %file CONFIG
 define ($N 10000000)
