Allow List Variables

--- a/tests/0100-dpdk-single-l2.conf
+++ b/tests/0100-dpdk-single-l2.conf
@@ -17,13 +17,17 @@ axis[0]=Throughput
 acceptable=0.01
 unacceptable_n_runs=3
 
+%variables
+L=[64*1024]
+#Use 0 and 2 to avoid NUMA node change
+TXCPU={0,2}
+RXCPU={0,2}
 
 %script
-click --dpdk -c 0x1 -n 4 -- CONFIG
+click --dpdk -c 0xf -n 4 -- CONFIG
 
 %file CONFIG
 define ($N 10000000)
-define ($L 60)
 
 define ($mac0 aa:bb:cc:dd:ee:f0)
 define ($mac1 aa:bb:cc:dd:ee:f1)
@@ -35,11 +39,12 @@ td0 :: ToDPDKDevice(0);
 fd1 :: FromDPDKDevice(1);
 td1 :: ToDPDKDevice(1);
 
-
 fu0 :: FastUDPFlows(RATE 0, LIMIT $N, LENGTH $L, SRCETH $mac0, DSTETH $mac1, SRCIP $ip0, DSTIP $ip1, FLOWS 1, FLOWSIZE $N)
-    -> Unqueue(32)
+    -> uq :: Unqueue(32)
 	-> Counter(COUNT_CALL $N finish.run)
 	-> td0;
+StaticThreadSched(fu0 0)
+StaticThreadSched(uq $TXCPU)
 
 fu1 :: FastUDPFlows(RATE 0, LIMIT 1, LENGTH $L, SRCETH $mac1, DSTETH $mac0, SRCIP $ip1, DSTIP $ip0, FLOWS 1, FLOWSIZE 1)
     -> Unqueue(1)
@@ -47,6 +52,7 @@ fu1 :: FastUDPFlows(RATE 0, LIMIT 1, LENGTH $L, SRCETH $mac1, DSTETH $mac0, SRCI
 
 fd1 -> ac :: AverageCounter
     -> Discard;
+StaticThreadSched(fd1 $RXCPU)
 
 finish :: Script(TYPE PASSIVE,
 			print "RESULT $(ac.link_rate)",
