Graph and tag support
Also new variable type "dict" so we can use a dict as varnames, to
replace "L" or "BURST" in the graph per a nice label like "Length" or
"Burst size"

--- a/tests/0030-infinitesource.conf
+++ b/tests/0030-infinitesource.conf
@@ -3,11 +3,12 @@ Simple performance test generating packets with InfiniteSource
 
 %config
 #Script is time-based on 2s, so if it is longer than 10s, there is a bug somewhere
-TIMEOUT=10
+timeout=10
 #Accept 1% changes
-ACCEPTABLE=0.01
+acceptable=0.01
 #Consider there was a problem if <1G
-MINIMUM=1000000000
+minimum=1000000000
+tags=dpdk
 
 %variables
 BURST=[1*1024]
