--- a/tests/0100-dpdk-single-l2.conf
+++ b/tests/0100-dpdk-single-l2.conf
@@ -1,27 +1,28 @@
 %info
 Test throughput through two NICs using DPDK
 
-%require
-#Still do nothing
-click-buildtool provides dpdk
-
 %config
-#Still do nothing
-tags=physdual,dpdk,fastclick,sudo
+require_tags=dpdk,fastclick
 
 #Grapg title
-title='DPDK L2 Fwd test'
+title=DPDK L2 FastUDPGen + Fwd test
+
 #Axis name
-axis[0]=Throughput
+varnames={L:Length,result:Throughput,TXCPU:Transmit CPU,RXCPU:Receive CPU}
 
 acceptable=0.01
 unacceptable_n_runs=3
 
 %variables
-L=[64*1024]
-#Use 0 and 2 to avoid NUMA node change
-TXCPU={0,2}
 RXCPU={0,2}
+L=[64*1024]
+
+#Use 0 and 2 to avoid NUMA node change
+cpu:TXCPU={0,2}
+#cpu:RXCPU={0,2}
+#Default
+-cpu:TXCPU=0
+#-cpu:RXCPU=2
 
 %script
 click --dpdk -c 0xf -n 4 -- CONFIG
