--- a/tests/0030-infinitesource.conf
+++ b/tests/0030-infinitesource.conf
@@ -9,13 +9,18 @@ acceptable=0.01
 #Consider there was a problem if <1G
 minimum=1000000000
 tags=dpdk
+var_names={BURST:Burst,LENGTH:60,result:Throughput}
+var_unit={BURST:Packets,LENGTH:Bytes,result:BPS}
+#var_lim={BURST:0-5}
+title=InfiniteSource Packet Generation
+legend_loc=upper left
 
 %variables
 BURST=[1*1024]
 LENGTH=60
 
 %script
-click -j 1 CONFIG
+click -c 0x1 -n 4 -- CONFIG || click -j 1 CONFIG
 
 %file CONFIG
 is :: InfiniteSource(LENGTH $LENGTH, BURST $BURST)
@@ -24,5 +29,5 @@ is :: InfiniteSource(LENGTH $LENGTH, BURST $BURST)
 
 finish :: Script(TYPE ACTIVE,
 			wait 2s,
-			print "RESULT $(ac.link_rate)",
+			print "RESULT $(mul $(ac.byte_rate) 8)",
 			stop);
