--- a/tests/0050-fastudpgen.conf
+++ b/tests/0050-fastudpgen.conf
@@ -1,13 +1,17 @@
+%info
+FastUDPFlows Generation Speed
+
 %script
-click CONFIG
+click -c 0x1 -n 4 -- CONFIG || click -j 1 CONFIG
 
 %variables
 L=[64*1024]
-BURST=[1*1024]
+BURST=[1*256]
 
 %config
-acceptable=0.01
-unacceptable_n_runs=3
+var_names={L:Length,BURST:Burst}
+n_runs=5
+var_serie=BURST
 
 %file CONFIG
 define ($mac0 aa:bb:cc:dd:ee:f0)
@@ -21,6 +25,6 @@ fu0 :: FastUDPFlows(RATE 0, LIMIT -1, LENGTH $L, SRCETH $mac0, DSTETH $mac1, SRC
     -> Discard;
 
 finish :: Script(TYPE ACTIVE,
-			wait 2s,
-			print "RESULT $(ac.link_rate)",
+			wait 1s,
+			print "RESULT $(mul $(ac.byte_rate) 8)",
 			stop);
