Use python 3, and expand a little more infinite source

--- a/tests/0030-infinitesource.conf
+++ b/tests/0030-infinitesource.conf
@@ -17,7 +17,7 @@ legend_loc=upper left
 
 %variables
 BURST=[1*1024]
-LENGTH=60
+LENGTH=[64*1024]
 
 %script
 click -c 0x1 -n 4 -- CONFIG || click -j 1 CONFIG
