Allow to re-use previous results

--- a/tests/0030-infinitesource.conf
+++ b/tests/0030-infinitesource.conf
@@ -9,15 +9,19 @@ acceptable=0.01
 #Consider there was a problem if <1G
 minimum=1000000000
 tags=dpdk
-var_names={BURST:Burst,LENGTH:60,result:Throughput}
+var_names={BURST:Burst,LENGTH:Length,result:Throughput}
 var_unit={BURST:Packets,LENGTH:Bytes,result:BPS}
-#var_lim={BURST:0-5}
 title=InfiniteSource Packet Generation
-legend_loc=upper left
+n_runs=3
+var_serie=LENGTH
 
 %variables
 BURST=[1*1024]
-LENGTH=[64*1024]
+LENGTH={64,128,512}
+#With L=1024 and BURST > 256, performances are dropping badly with Click
+
+fastregression:BURST={1,32,256}
+fastregression:LENGTH=64
 
 %script
 click -c 0x1 -n 4 -- CONFIG || click -j 1 CONFIG
