--- a/tests/0050-fastudpgen.conf
+++ b/tests/0050-fastudpgen.conf
@@ -5,12 +5,15 @@ FastUDPFlows Generation Speed
 click -c 0x1 -n 4 -- CONFIG || click -j 1 CONFIG
 
 %variables
-L=[64*1024]
-BURST=[1*256]
+BURST=[1*1024]
+LENGTH={64,128,512}
+
+fastregression:BURST={1,32,256}
+fastregression:L=64
 
 %config
-var_names={L:Length,BURST:Burst}
-n_runs=5
+var_names={LENGTH:Length,BURST:Burst}
+n_runs=3
 var_serie=BURST
 
 %file CONFIG
@@ -19,7 +22,7 @@ define ($mac1 aa:bb:cc:dd:ee:f1)
 define ($ip0 10.19.0.1)
 define ($ip1 10.19.0.2)
 
-fu0 :: FastUDPFlows(RATE 0, LIMIT -1, LENGTH $L, SRCETH $mac0, DSTETH $mac1, SRCIP $ip0, DSTIP $ip1, FLOWS 1, FLOWSIZE 100)
+fu0 :: FastUDPFlows(RATE 0, LIMIT -1, LENGTH $LENGTH, SRCETH $mac0, DSTETH $mac1, SRCIP $ip0, DSTIP $ip1, FLOWS 1, FLOWSIZE 100)
     -> ac :: AverageCounter
 	-> Unqueue($BURST)
     -> Discard;
