--- a/tests/0050-fastudpgen.conf
+++ b/tests/0050-fastudpgen.conf
@@ -14,7 +14,7 @@ fastregression:L=64
 %config
 var_names={LENGTH:Length,BURST:Burst}
 n_runs=3
-var_serie=BURST
+var_serie=LENGTH
 
 %file CONFIG
 define ($mac0 aa:bb:cc:dd:ee:f0)
