--- a/tests/0100-dpdk-single-l2.conf
+++ b/tests/0100-dpdk-single-l2.conf
@@ -25,7 +25,7 @@ cpu:TXCPU={0,2}
 #-cpu:RXCPU=2
 
 %script
-click --dpdk -c 0xf -n 4 -- CONFIG
+click -c 0xf -n 4 -- CONFIG || click --dpdk -c 0xf -n 4 -- CONFIG
 
 %file CONFIG
 define ($N 10000000)
@@ -56,5 +56,5 @@ fd1 -> ac :: AverageCounter
 StaticThreadSched(fd1 $RXCPU)
 
 finish :: Script(TYPE PASSIVE,
-			print "RESULT $(ac.link_rate)",
+			print "RESULT $(add $(mul $(ac.byte_rate) 8) $(mul $(ac.count) 24))",
 			stop);
