Support for log scale, and uuids to just graph in regression

--- a/tests/0060-ipfilter_compile.conf
+++ b/tests/0060-ipfilter_compile.conf
@@ -5,6 +5,7 @@ IPFilter Compilation time
 var_names={result:Click total execution time,RULES:Number of rules}
 var_hide={SPORT,DPORT,PROTO,N_RULES}
 var_unit={result:s}
+var_log={result}
 
 %script
 
