--- a/tests/pktgen/0030-infinitesource.conf
+++ b/tests/pktgen/0030-infinitesource.conf
@@ -32,6 +32,8 @@ is :: InfiniteSource(LENGTH $LENGTH, BURST $BURST)
     -> Discard;
 
 finish :: Script(TYPE ACTIVE,
-			wait 3s,
+            wait 1s,
+            write ac.reset,
+			wait 4s,
 			print "RESULT $(mul $(ac.byte_rate) 8)",
 			stop);
