--- a/tests/pktgen/0050-fastudpgen.conf
+++ b/tests/pktgen/0050-fastudpgen.conf
@@ -29,5 +29,7 @@ fu0 :: FastUDPFlows(RATE 0, LIMIT -1, LENGTH $LENGTH, SRCETH $mac0, DSTETH $mac1
 
 finish :: Script(TYPE ACTIVE,
 			wait 1s,
+            write ac.reset,
+            wait 4s,
 			print "RESULT $(mul $(ac.byte_rate) 8)",
 			stop);
