Update DPDK script
Old click is victim of a timeout problem, so fix it to 15 and be more
robust against slow link init.

--- a/tests/dpdk/0100-dpdk-single-l2.conf
+++ b/tests/dpdk/0100-dpdk-single-l2.conf
@@ -6,6 +6,7 @@ require_tags=dpdk,fastclick
 
 #Grapg title
 title=DPDK L2 FastUDPGen + Fwd test
+timeout=15
 
 #Axis name
 varnames={L:Length,result:Throughput,TXCPU:Transmit CPU,RXCPU:Receive CPU}
@@ -14,17 +15,20 @@ acceptable=0.01
 
 %variables
 RXCPU={0,2}
+fastregression:RXCPU=2
 L=[64*1024]
+fastregression:L={64,256,1024}
+
+#Default
+TXCPU=0
 
 #Use 0 and 2 to avoid NUMA node change
 cpu:TXCPU={0,2}
-#cpu:RXCPU={0,2}
-#Default
--cpu:TXCPU=0
-#-cpu:RXCPU=2
+
+
 
 %script
-click -c 0xf -n 4 -- CONFIG || click --dpdk -c 0xf -n 4 -- CONFIG
+sudo -E env "PATH=$PATH" click -c 0xf -n 4 -- CONFIG || sudo -E env "PATH=$PATH" click --dpdk -c 0xf -n 4 -- CONFIG
 
 %file CONFIG
 define ($N 10000000)
@@ -39,21 +43,25 @@ td0 :: ToDPDKDevice(0);
 fd1 :: FromDPDKDevice(1);
 td1 :: ToDPDKDevice(1);
 
-fu0 :: FastUDPFlows(RATE 0, LIMIT $N, LENGTH $L, SRCETH $mac0, DSTETH $mac1, SRCIP $ip0, DSTIP $ip1, FLOWS 1, FLOWSIZE $N)
+fu0 :: FastUDPFlows(RATE 0, LIMIT $N, LENGTH $L, SRCETH $mac0, DSTETH $mac1, SRCIP $ip0, DSTIP $ip1, FLOWS 1, FLOWSIZE $N, ACTIVE false)
     -> uq :: Unqueue(32)
-	-> Counter(COUNT_CALL $N finish.run)
-	-> td0;
+    -> td0;
 StaticThreadSched(fu0 0)
 StaticThreadSched(uq $TXCPU)
 
 fu1 :: FastUDPFlows(RATE 0, LIMIT 1, LENGTH $L, SRCETH $mac1, DSTETH $mac0, SRCIP $ip1, DSTIP $ip0, FLOWS 1, FLOWSIZE 1)
     -> Unqueue(1)
-	-> td1;
+    -> td1;
 
 fd1 -> ac :: AverageCounter
     -> Discard;
 StaticThreadSched(fd1 $RXCPU)
 
-finish :: Script(TYPE PASSIVE,
-			print "RESULT $(add $(mul $(ac.byte_rate) 8) $(mul $(ac.count) 24))",
-			stop);
+finish :: Script(       print "Waiting for link initialization...",
+                        wait 2s,
+                        print "Launching test !",
+                        write ac.reset,
+                        write fu0.active true,
+                        wait 5s,
+                        print "RESULT $(add $(mul $(ac.byte_rate) 8) $(mul $(ac.count) 24))",
+                        stop);
