--- a/tests/dpdk/0100-dpdk-single-l2.conf
+++ b/tests/dpdk/0100-dpdk-single-l2.conf
@@ -10,7 +10,7 @@ timeout=15
 
 #Axis name
 varnames={L:Length,result:Throughput,TXCPU:Transmit CPU,RXCPU:Receive CPU}
-
+n_retry=3
 acceptable=0.01
 
 %variables
@@ -28,7 +28,7 @@ cpu:TXCPU={0,2}
 
 
 %script
-sudo -E env "PATH=$PATH" click -c 0xf -n 4 -- CONFIG || sudo -E env "PATH=$PATH" click --dpdk -c 0xf -n 4 -- CONFIG
+click -n 4 -c 0xf -- CONFIG || click --dpdk -n 4 -c 0xf -- CONFIG
 
 %file CONFIG
 define ($N 10000000)
