Add watcher.py script
Loop on some repositories to check for new commits and send an e-mail with results

--- a/tests/dpdk/0100-dpdk-single-l2.conf
+++ b/tests/dpdk/0100-dpdk-single-l2.conf
@@ -2,7 +2,7 @@
 Test throughput through two NICs using DPDK
 
 %config
-require_tags=dpdk,fastclick
+require_tags={dpdk}
 
 #Grapg title
 title=DPDK L2 FastUDPGen + Fwd test
