--- a/tests/pktgen/0050-fastudpgen.conf
+++ b/tests/pktgen/0050-fastudpgen.conf
@@ -9,7 +9,7 @@ BURST=[1*1024]
 LENGTH={64,128,512}
 
 fastregression:BURST={1,32,256}
-fastregression:L=64
+fastregression:LENGTH=64
 
 %config
 var_names={LENGTH:Length,BURST:Burst}
