--- a/tests/ip/0060-ipfilter_compile.conf
+++ b/tests/ip/0060-ipfilter_compile.conf
@@ -6,6 +6,7 @@ var_names={result:Click total execution time,RULES:Number of rules}
 var_hide={SPORT,DPORT,PROTO,N_RULES}
 var_unit={result:s}
 var_log={result}
+fastregression:var_log={}
 n_runs=2
 n_supplementary_runs=3
 acceptable=0.02
