--- a/tests/pktgen/0050-fastudpgen.conf
+++ b/tests/pktgen/0050-fastudpgen.conf
@@ -14,6 +14,7 @@ fastregression:LENGTH=64
 %config
 var_names={LENGTH:Length,BURST:Burst}
 n_runs=3
+accept_variance=2
 var_serie=LENGTH
 
 %file CONFIG
