--- a/tests/dpdk/0100-dpdk-single-l2.conf
+++ b/tests/dpdk/0100-dpdk-single-l2.conf
@@ -9,47 +9,56 @@ title=DPDK L2 FastUDPGen + Fwd test
 timeout=15
 
 #Axis name
-varnames={L:Length,result:Throughput,TXCPU:Transmit CPU,RXCPU:Receive CPU}
+varnames={LENGTH:Length,result:Throughput,TXCPU:Transmit CPU,RXCPU:Receive CPU}
 n_retry=3
 acceptable=0.01
+var_serie=LENGTH
 
 %variables
 RXCPU={0,2}
 fastregression:RXCPU=2
-L=[64*1024]
-fastregression:L={64,256,1024}
+LENGTH=[64*1024]
+fastregression:LENGTH={64,256,1024}
 
 #Default
 TXCPU=0
 
 #Use 0 and 2 to avoid NUMA node change
-cpu:TXCPU={0,2}
+full:TXCPU={0,2}
 
+FLOWSIZE=32
+BLOCK=false
+
+full:FLOWSIZE=[1*256]
+full:BLOCK={true,false}
+
+INIT_TIME=[2-5]
+FULL_TIME=1
+TEST_TIME={1,2,3}
 
 
 %script
 click -n 4 -c 0xf -- CONFIG || click --dpdk -n 4 -c 0xf -- CONFIG
 
 %file CONFIG
-define ($N 10000000)
-
 define ($mac0 aa:bb:cc:dd:ee:f0)
 define ($mac1 aa:bb:cc:dd:ee:f1)
 define ($ip0 10.19.0.1)
 define ($ip1 10.19.0.2)
 
 //fd0 :: FromDPDKDevice(0);
-td0 :: ToDPDKDevice(0);
+td0 :: ToDPDKDevice(0, BLOCKING $BLOCK);
 fd1 :: FromDPDKDevice(1);
 td1 :: ToDPDKDevice(1);
 
-fu0 :: FastUDPFlows(RATE 0, LIMIT $N, LENGTH $L, SRCETH $mac0, DSTETH $mac1, SRCIP $ip0, DSTIP $ip1, FLOWS 1, FLOWSIZE $N, ACTIVE false)
+fu0 :: FastUDPFlows(RATE 0, LIMIT -1, LENGTH $LENGTH, SRCETH $mac0, DSTETH $mac1,
+SRCIP $ip0, DSTIP $ip1, FLOWS 1, FLOWSIZE $FLOWSIZE, ACTIVE false)
     -> uq :: Unqueue(32)
     -> td0;
 StaticThreadSched(fu0 0)
 StaticThreadSched(uq $TXCPU)
 
-fu1 :: FastUDPFlows(RATE 0, LIMIT 1, LENGTH $L, SRCETH $mac1, DSTETH $mac0, SRCIP $ip1, DSTIP $ip0, FLOWS 1, FLOWSIZE 1)
+fu1 :: FastUDPFlows(RATE 0, LIMIT 1, LENGTH 64, SRCETH $mac1, DSTETH $mac0, SRCIP $ip1, DSTIP $ip0, FLOWS 1, FLOWSIZE 1)
     -> Unqueue(1)
     -> td1;
 
@@ -58,10 +67,11 @@ fd1 -> ac :: AverageCounter
 StaticThreadSched(fd1 $RXCPU)
 
 finish :: Script(       print "Waiting for link initialization...",
-                        wait 2s,
+                        wait $INIT_TIMEs,
                         print "Launching test !",
-                        write ac.reset,
                         write fu0.active true,
-                        wait 5s,
+                        wait $FULL_TIMEs,
+                        write ac.reset,
+                        wait $TEST_TIMEs,
                         print "RESULT $(add $(mul $(ac.byte_rate) 8) $(mul $(ac.count) 24))",
                         stop);
