--- a/tests/dpdk/0100-dpdk-single-l2.conf
+++ b/tests/dpdk/0100-dpdk-single-l2.conf
@@ -12,6 +12,7 @@ timeout=15
 varnames={LENGTH:Length,result:Throughput,TXCPU:Transmit CPU,RXCPU:Receive CPU}
 n_retry=3
 acceptable=0.01
+n_runs=1
 var_serie=LENGTH
 
 %variables
@@ -32,10 +33,12 @@ BLOCK=false
 full:FLOWSIZE=[1*256]
 full:BLOCK={true,false}
 
-INIT_TIME=[2-5]
+INIT_TIME=[4-7]
 FULL_TIME=1
 TEST_TIME={1,2,3}
 
+fastregression:INIT_TIME=5
+fastregression:TEST_TIME=2
 
 %script
 click -n 4 -c 0xf -- CONFIG || click --dpdk -n 4 -c 0xf -- CONFIG
