--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ sudo: true
 install:
     - sudo apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran
     - sudo pip install --upgrade pip
-    - pip install numpy
-    - pip install SciPy
+    - pip install --only-binary=numpy,scipy numpy scipy
     - pip install -r requirements.txt
 script: integration/integration.sh
