--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,5 @@ install:
     - pip install --only-binary=numpy,scipy numpy scipy
     - pip install -r requirements.txt
 script: integration/integration.sh
+cache:
+    - build
