--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,10 @@
 cache:
-    directories:
-        - build
+    apt: true
+    pip: true
 language: python
 python:
-#- "3.2" there is no binary numpy for 3.2
-    - "3.5"
-sudo: true
+    - "3.6"
 install:
-    - sudo apt-get install libblas-dev liblapack-dev libatlas-base-dev gfortran
-    - sudo pip install --upgrade pip
-    - pip install --only-binary=numpy,scipy numpy scipy
     - pip install -r requirements.txt
+
 script: integration/integration.sh
-cache:
-    - build
