--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,8 @@ name: Python application
 
 on:
   push:
-    branches: [ master ]
+    branches: 
+      - '*'
   pull_request:
     branches: [ master ]
 
