--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
     -
         name: Build and push
         uses: docker/build-push-action@v5
