--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,18 @@ on:
     branches: [ master ]
 
 jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+    -   name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+    -
+        name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          push: false
+          tags: tbarbette/npf:latest
+
   build:
     runs-on: ubuntu-latest
     steps:
